personal-website/overlay/local-homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress
  namespace: personal-website
spec:
  rules:
    - host: personal-website.local.aeoly.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-website
                port:
                  number: 80
